src/assets/components/_buttons.scss
$size: 2.5rem;
@mixin button(
  $color: green,
  $colorBorder: rgb(0, 170, 0),
  $box: false,
  $hover: false
) {
  @if ($box) {
    width: $size;
    height: $size;
  } @else {
    width: 7rem;
    height: 2.5rem;
  }
  // @if ($hover) {
  //   border: 1px $colorBorder solid;
  // } @else {
  //   border: none;
  // }
  border: 1px $colorBorder solid;
  padding: 1rem;
  border-radius: 5px;

  background-color: $color;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 0.3s;
  cursor: pointer;
}

.btn {
  &-green {
    @include button(green, rgb(0, 170, 0));

    &:hover {
      @include button(transparent, rgb(0, 170, 0), false, true);
    }
  }
  &-red {
    @include button(rgb(128, 0, 0), rgb(170, 0, 0));
    &:hover {
      @include button(transparent, rgb(170, 0, 0), false, true);
    }
  }

  &-box-green {
    @include button(green, $box: true);
    background-repeat: no-repeat;
    background-size: 50% 50%;
    background-position: center;
    &:hover {
      @include button(transparent, green, true, true);
    }
  }
  &-box-red {
    @include button(rgb(128, 0, 0), rgb(170, 0, 0), $box: true);
    background-repeat: no-repeat;
    background-size: 50% 50%;
    background-position: center;
    &:hover {
      @include button(
        transparent,
        $colorBorder: rgb(170, 0, 0),
        $box: true,
        $hover: true
      );
    }
  }
}

.heart {
  position: fixed;
  pointer-events: none;
  animation: explode 800ms ease-out forwards;
}

@keyframes explode {
  0% {
    transform: translate(0, 0) scale(1);
    opacity: 1;
  }
  100% {
    transform: translate(var(--x), var(--y)) scale(0.5);
    opacity: 0;
  }
}

